# OptimizedCode

./: .gitignore  CMakeLists.txt  Makefile  OPTIMIZATION_REPORT.md  PROJECT_STRUCTURE.md  README.md  build.sh
include/: ArrayUtils  StringUtils.hpp
src/: ArrayUtils.cpp  main.cpp
tests/: CMakeLists.txt  test_array_utils.cpp  test_string_utils.cpp
